--- a/package.json
+++ b/package.json
@@ -49,23 +49,23 @@
     "cross-env": "7.0.3"
   },
   "devDependencies": {
-    "@changesets/changelog-git": "0.2.0",
-    "@changesets/cli": "2.27.8",
-    "@commitlint/cli": "19.5.0",
-    "@commitlint/config-conventional": "19.5.0",
+    "@changesets/changelog-git": "^0.2.0",
+    "@changesets/cli": "^2.27.8",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@hyperse/eslint-config-hyperse": "^1.1.3",
-    "commitizen": "4.3.0",
-    "cz-conventional-changelog": "3.3.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.10.0",
-    "husky": "9.1.6",
-    "is-ci": "3.0.1",
-    "lint-staged": "15.2.7",
-    "minimist": "1.2.8",
-    "npm-run-all": "4.1.5",
-    "rimraf": "5.0.7",
-    "terser": "5.31.1",
-    "turbo": "2.1.2",
-    "typescript": "5.4.5"
+    "husky": "^9.1.6",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^15.2.7",
+    "minimist": "^1.2.8",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.7",
+    "terser": "^5.31.1",
+    "turbo": "^2.1.2",
+    "typescript": "^5.4.5"
   },
   "engines": {
     "node": ">=18.0.0",
