--- a/packages/rolldown/package.json
+++ b/packages/rolldown/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agile/library02",
+  "name": "@agile/rolldown",
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
@@ -17,7 +17,7 @@
     "./index.js"
   ],
   "scripts": {
-    "build": "rimraf dist && tsc -p ./tsconfig.build.json",
+    "build": "rimraf dist && rolldown -c rolldown.config.mjs",
     "?build-release": "When https://github.com/atlassian/changesets/issues/432 has a solution we can remove this trick",
     "build-release": "yarn build && rimraf ./_release && yarn pack && mkdir ./_release && tar zxvf ./package.tgz --directory ./_release && rm ./package.tgz",
     "clean": "rimraf --no-glob ./dist ./turbo ./coverage ./__data__ ./config/__data__ ./_release ./tsconfig.tsbuildinfo",
@@ -36,9 +36,9 @@
     "@vitest/coverage-istanbul": "2.1.2",
     "@vitest/ui": "2.1.2",
     "eslint": "^9.12.0",
-    "minimist": "^1.2.8",
     "npm-run-all": "4.1.5",
     "rimraf": "6.0.1",
+    "rolldown": "0.13.2",
     "typescript": "^5.6.2",
     "vite-tsconfig-paths": "5.0.1",
     "vitest": "2.1.2"
