--- a/package.json
+++ b/package.json
@@ -49,22 +49,23 @@
     "cross-env": "7.0.3"
   },
   "devDependencies": {
-    "@changesets/changelog-git": "^0.2.0",
-    "@changesets/cli": "^2.27.12",
+    "@changesets/changelog-git": "^0.2.1",
+    "@changesets/cli": "^2.28.1",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
-    "@hyperse/eslint-config-hyperse": "^1.2.9",
+    "@hyperse/eslint-config-hyperse": "^1.2.10",
+    "@hyperse/ts-node-paths": "^1.0.12",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.20.0",
+    "eslint": "^9.21.0",
     "husky": "^9.1.7",
     "is-ci": "^4.1.0",
     "lint-staged": "^15.4.3",
     "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
-    "terser": "^5.38.1",
-    "turbo": "^2.4.0",
+    "terser": "^5.39.0",
+    "turbo": "^2.4.2",
     "typescript": "^5.7.3"
   },
   "engines": {
